<resources>
    <string name="app_name">ACN</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_bg_img_desc">splash background image</string>
    <string name="splash_loading_txt">Getting up to speed…</string>
    <string name="retry_txt">Retry</string>
    <string name="login_fragment_lbl">Login</string>
    <string name="home_fragment_lbl">ACN</string>
    <string name="sign_in_title">Let\'s Sign You In</string>
    <string name="country_txt">Country</string>
    <string name="phone_number_txt">Phone number</string>
    <string name="phone_number_helper_txt">*include country code</string>
    <string name="verification_code_helper_txt">*verification code sent to your phone number</string>
    <string name="verification_code_txt">Verification Code</string>
    <string name="get_code_txt">Get Code</string>
    <string name="verification_code_longer_hint">Enter your phone number then click get code to receive a verification code in your sms.\nYou may be redirected to your browser during verification.\nOnce sent, it might take a minute to receive the code.</string>
    <string name="sign_in_btn_txt">Sign In</string>
    <string name="terms_agreeing_hint">By clicking sign in, you are agreeing to our terms and conditions of use. \nClick this message to review them first.</string>
    <string name="country_code_txt">+</string>
    <string name="sending_verification_code">"SENDING … "</string>
    <string name="country_code_empty_err_txt">Please select your country</string>
    <string name="phone_empty_err_txt">Please enter your phone number</string>
    <string name="invalid_phone_err">Check your phone number and try again</string>
    <string name="sms_quota_exceeded_err">Sorry, we are unable to verify your phone at the moment!</string>
    <string name="verification_err_unknown">Failed to verify your number. Check your internet and retry</string>
    <string name="verification_code_was_sent_txt">Check your sms inbox for a verification code</string>
    <string name="resend_code_txt">RESEND CODE</string>
    <string name="verified_txt">Verified!</string>
    <string name="slow_or_no_internet">Slow or no internet connection</string>
    <string name="verify_phone_first">"Please verify your phone number first "</string>
    <string name="invalid_verification_code_err">Incorrect verification code</string>
    <string name="failed_to_sign_in_err">Failed to sign in… check your info and retry</string>
    <string name="seller_intent">Sell My Car</string>
    <string name="dealer_intent">Buy A Car</string>
    <string name="choose_seller_or_dealer_prompt">I wish to</string>
    <string name="fragment_welcome_title_lbl">Hello, </string>
    <string name="username_helper_txt">what do we call you? *</string>
    <string name="username_lbl">Username</string>
    <string name="default_username">Anon</string>
    <string name="select_dealer_or_seller_hint">Hold one of the above to select</string>
    <string name="welcome_done_btn_txt">Done</string>
    <string name="seller_dealer_selection_terms_hint">Selecting Buy A Car will set your account as a Car Dealer. As a Car Dealer, you are subject to these terms and conditions (Click this message to review them before proceeding).</string>
    <string name="dismiss">Dismiss</string>
    <string name="select_dealer_or_seller_err">Long press to select one of the two choices</string>
    <string name="my_cars_txt">My Cars</string>


    <!-- ADD NEW CAR -->
    <string name="add_a_new_car_txt">Add a new car</string>
    <string name="save_txt">Save</string>
    <string name="my_car_txt">My Car</string>
    <string name="car_body_style_hint">Body Style</string>
    <string name="car_make_hint">Make</string>
    <string name="car_make_helper_txt">e.g. Toyota</string>
    <string name="car_model_helper_txt">e.g. Camry</string>
    <string name="car_model_hint">Model</string>
    <string name="car_year_hint">Year</string>
    <string name="car_color_hint">Color</string>
    <string name="car_mileage_hint">Mileage</string>
    <string name="car_if_accident_hint">Has been in an accident</string>
    <string name="car_if_flood_damage_hint">Has flood damage</string>
    <string name="car_if_flame_damage_hint">Has fire damage</string>
    <string name="car_if_dashboard_issues_hint">Dashboard shows warning lights</string>
    <string name="car_if_odometer_issues_hint">Has broken or replaced Odometer</string>
    <string name="car_tyres_to_replace_num_hint">Tyres needing replacement</string>
    <string name="add_car_extra_details">Extra info</string>
    <string name="add_car_condition_hint">Condition</string>
    <string name="add_car_condition_helper_txt">fair / good / excellent</string>
    <string name="add_car_subtitle">Provide info about your car</string>
    <string name="car_body_style_helper_txt">e.g. Sedan</string>
    <string name="add_car_extra_details_helper">any extra information about your car</string>
    <string name="saving_please_wait">Saving …</string>
    <string name="car_if_has_customizations_hint">I have customized parts of it</string>
    <string name="missing_required_car_info"><![CDATA[Car make, model, year, color, condition & mileage is required]]></string>
    <string name="got_it_txt">Got It!</string>
    <string name="car_saved_redirecting">Saved … redirecting</string>
    <string name="add_car_images_subtitle">Add photos of your car</string>
    <string name="my_car_photos_txt">Car Photos</string>
    <string name="add_photos_later_txt">Skip this</string>
    <string name="add_photo_txt">Add Photo</string>
    <string name="ok_txt">Okay</string>
    <string name="cancel_adding_photos_later">Cancel</string>
    <string name="add_photos_later_confirm_title">Click okay to add photos later. Your car info has been saved.</string>
    <string name="car_img_desc">Car Image</string>
    <string name="edit_my_car_txt">edit my car</string>
    <string name="delete_my_car_txt">Delete Car</string>
    <string name="car_image_desc">Car Image</string>
    <string name="no_camera_detected">No camera app was detected!</string>
    <string name="select_photo_in_gallery_title">Select a photo of your car</string>
    <string name="delete_image_menu_txt">Remove image</string>
    <string name="select_imgs_to_delete">Click on the images to select them first</string>
    <string name="yes_txt">Yes</string>
    <string name="delete_selected_images">Delete selected images?</string>
    <string name="cancel_action_txt">Cancel</string>
    <string name="please_add_photos">Please add photos of your car</string>
    <string name="failed_to_upload_images">Failed to upload images. Check your internet connection</string>
    <string name="saving_unknown_err"><![CDATA[An error occurred. Check your internet & retry]]></string>
    <string name="failed_to_save_car"><![CDATA[Sending car info failed. Check your internet connection & retry]]></string>
    <string name="swipe_right_for_more_images_desc">swipe right for more images</string>
    <string name="cars_txt">Cars</string>
    <string name="updating_user_status_failed"><![CDATA[Failed to update your status… check your internet & retry]]></string>
    <string name="delete_car_confirm">Are you sure you want to delete this car?</string>
    <string name="car_deleted_redirecting">Delete successfully … redirecting</string>
    <string name="msg_seller_menu_txt">Message seller</string>
    <string name="fragment_dealer_car_details_lbl">Car Info</string>
    <string name="interested_in_this_car_txt">Interested in this car?</string>
    <string name="initial_offer_helper_txt">*you can negotiate this in the chat</string>
    <string name="initial_offer_hint_txt">Initial Offer USD</string>
    <string name="initial_offer_subtitle">To protect sellers from spam offers, we review the initial offer before connecting you to the buyer where you can chat and negotiate further.</string>
    <string name="send_offer_btn_txt">Send Offer</string>
    <string name="send_offer_later_btn_txt">Later</string>
    <string name="sending_initial_offer_txt">Sending offer…</string>
    <string name="unknown_err_occurred">An error occurred! Check your internet connection</string>
    <string name="initial_offer_sent_success">Your offer has been sent! The seller should reach out to you shortly after receiving your offer</string>
    <string name="optional_txt">*optional</string>
    <string name="initial_offer_message_hint">Message</string>
    <string name="initial_offer_zero_err">Initial offer cannot be zero</string>
    <string name="default_initial_offer_msg">Hello there. I am interested in buying your car</string>
    <string name="failed_to_init_car_details">Failed to fetch car details</string>
    <string name="you_have_made_offer">You have sent an offer to the seller!</string>
    <string name="update_offer_prompt_txt">Update your original offer?</string>
    <string name="update_offer_btn_txt">Update Offer</string>
    <string name="initial_offer_sent_success_short">Your offer was sent</string>
    <string name="has_made_offer_desc">has made offer for this car</string>
    <string name="received_offers_txt">Offers</string>
    <string name="fragment_received_offers_lbl">Received Offers</string>
    <string name="currency_suffix">USD</string>
    <string name="message_hint_txt">Type a message</string>
    <string name="add_a_picture_desc">add a picture</string>
    <string name="send_message_desc">send message</string>
    <string name="fragment_chat_lbl">Chat</string>
    <string name="starting_offer_prefix">Dealer\'s initial offer</string>
    <string name="sent_image_desc">Sent Image</string>
    <string name="received_image_desc">Received Image</string>
    <string name="fragment_sent_offers_lbl">My offers</string>
    <string name="full_image_desc">full image</string>
</resources>